--- a/src/home-one.html
+++ b/src/home-one.html
@@ -183,8 +183,13 @@
                 <div class="row gy-4 z-5 position-relative">
                     <div class="col-lg-6 h-full d-flex align-items-center">
                         <div class="d-flex flex-column">
-                            <div><span class="d-inline-block py-2 px-3 rounded-pill border border-gray-200 bg-white h6 text-blue fw-500" data-aos="fade-up" data-aos-duration="200">Online program is now available</span></div>
-                            <h1 class="display6-size text-gray-900 fw-700 mt-2 mb-3 banner-text" data-aos="fade-up" data-aos-duration="400">Empowering <span class="text-blue">Enterprises</span> to Grow Smarter</h1>
+                            <div><span class="d-inline-block py-2 px-3 rounded-pill border border-gray-200 bg-white fs-15 text-blue fw-500" data-aos="fade-up" data-aos-duration="200">Online program is now available</span></div>
+                            <h1 class="display6-size text-gray-900 fw-600 mt-2 mb-3 banner-text d-ruby" data-aos="fade-up" data-aos-duration="400">
+                                Empowering  
+                                <span class="text-blue">Superior</span> 
+                                results 
+                                by thinking
+                            </h1>
                             <p class="fw-500 text-gray-900 w-lg-75 display1-size" data-aos="fade-up" data-aos-duration="500">When you join our journey, you are choosing a partner who believes in a healthier, more balanced you — and works tirelessly to help you get there.</p>
                             <div class="d-flex flex-sm-row flex-column gap-sm-3 gap-2 pt-4 pb-3">
                                 <a href="pricing-2.html" data-aos="zoom-in" data-aos-duration="400" class="btn bg-primary btn-lg rounded-2 px-4 text-white mb-1 d-flex gap-3 align-items-center justify-content-center btn-hover-bg-darken-primary border-0">
@@ -201,7 +206,7 @@
                         </div>
                     </div>
                     <div class="col-lg-6">
-                        <div class="bg-gradient-black-bottom-g5 position-relative rounded-4 overflow-hidden" data-aos="fade-up" data-aos-duration="600">
+                        <div class="position-relative rounded-4" data-aos="fade-up" data-aos-duration="600">
                             <img
                                 src="images/home-1/right-banner-bg.webp"
                                 alt="banner"
@@ -210,24 +215,45 @@
                                 loading="eager"
                                 width="637"
                                 height="721"
-                                class="img-fluid"
+                                class="img-fluid rounded-5"
                             />
+                            <div class="position-absolute top-16 start-0 translate-middle d-none d-lg-flex">
+                                <i class="w-15 h-15 rounded-5 bg-darkgreen d-flex align-items-center justify-content-center text-center">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-boxes text-gray-900" viewBox="0 0 16 16">
+                                    <path d="M7.752.066a.5.5 0 0 1 .496 0l3.75 2.143a.5.5 0 0 1 .252.434v3.995l3.498 2A.5.5 0 0 1 16 9.07v4.286a.5.5 0 0 1-.252.434l-3.75 2.143a.5.5 0 0 1-.496 0l-3.502-2-3.502 2.001a.5.5 0 0 1-.496 0l-3.75-2.143A.5.5 0 0 1 0 13.357V9.071a.5.5 0 0 1 .252-.434L3.75 6.638V2.643a.5.5 0 0 1 .252-.434zM4.25 7.504 1.508 9.071l2.742 1.567 2.742-1.567zM7.5 9.933l-2.75 1.571v3.134l2.75-1.571zm1 3.134 2.75 1.571v-3.134L8.5 9.933zm.508-3.996 2.742 1.567 2.742-1.567-2.742-1.567zm2.242-2.433V3.504L8.5 5.076V8.21zM7.5 8.21V5.076L4.75 3.504v3.134zM5.258 2.643 8 4.21l2.742-1.567L8 1.076zM15 9.933l-2.75 1.571v3.134L15 13.067zM3.75 14.638v-3.134L1 9.933v3.134z"/>
+                                    </svg>
+                                </i>
+                            </div>
+                            <div class="mt-4 flex-row gap-4 d-lg-flex d-none position-absolute end-n-8 top-4 bg-white rounded-4 border border-gray-200 shadow-sm p-3" data-aos="fade-up" data-aos-duration="400" data-delay="400">
+                                <div class="avatar-group d-flex flex-row" >
+                                    <div class="avatar me-2 avatar-rounded">
+                                        <img src="images/avatars/avater-11.webp" alt="member-avatar" class="rounded-pill w-12 h-12" loading="lazy"> 
+                                    </div>
+                                    <div class="avatar me-2 avatar-rounded">
+                                        <img src="images/avatars/avater-12.webp" alt="member-avatar" class="rounded-pill w-12 h-12" loading="lazy"> 
+                                    </div>
+                                    <div class="avatar me-2 avatar-rounded">
+                                        <img src="images/avatars/avater-13.webp" alt="member-avatar" class="rounded-pill w-12 h-12" loading="lazy"> 
+                                    </div>
+                                </div>
+                                <h3 class="text-gray-900 fw-500 mb-0">7.65m+ <span class="d-block text-gray-900 fs-15 fw-500">Content Creators and Teams</span></h3>
+                            </div>
                             <div class="w-100 bottom-0 z-5 start-0 m-4 d-flex flex-column position-absolute">
-                                <div id="vertical-carousel" class="splide overflow-hidden vertical-sldier h-135">
+                                <div id="vertical-carousel" class="splide overflow-hidden vertical-sldier h-135 slider-no-dots">
                                     <div class="splide__track">
                                         <ul class="splide__list">
-                                            <li class="splide__slide"><span class="d-inline-block py-1 px-3 bg-white rounded-pill fs-16 text-gray-900 fw-500">Affordable & scalable plans </span></li>
-                                            <li class="splide__slide"><span class="d-inline-block py-1 px-3 bg-white rounded-pill fs-16 text-gray-900 fw-500">Plans that fit every stage </span></li>
-                                            <li class="splide__slide"><span class="d-inline-block py-1 px-3 bg-white rounded-pill fs-16 text-gray-900 fw-500">Built to scale with your needs </span></li>
-                                            <li class="splide__slide"><span class="d-inline-block py-1 px-3 bg-white rounded-pill fs-16 text-gray-900 fw-500">Affordable & scalable plans </span></li>
-                                            <li class="splide__slide"><span class="d-inline-block py-1 px-3 bg-white rounded-pill fs-16 text-gray-900 fw-500">Plans that fit every stage </span></li>
-                                            <li class="splide__slide"><span class="d-inline-block py-1 px-3 bg-white rounded-pill fs-16 text-gray-900 fw-500">Built to scale with your needs </span></li>
-                                            <li class="splide__slide"><span class="d-inline-block py-1 px-3 bg-white rounded-pill fs-16 text-gray-900 fw-500">Affordable & scalable plans </span></li>
-                                            <li class="splide__slide"><span class="d-inline-block py-1 px-3 bg-white rounded-pill fs-16 text-gray-900 fw-500">Plans that fit every stage </span></li>
-                                            <li class="splide__slide"><span class="d-inline-block py-1 px-3 bg-white rounded-pill fs-16 text-gray-900 fw-500">Built to scale with your needs </span></li>
-                                            <li class="splide__slide"><span class="d-inline-block py-1 px-3 bg-white rounded-pill fs-16 text-gray-900 fw-500">Affordable & scalable plans </span></li>
-                                            <li class="splide__slide"><span class="d-inline-block py-1 px-3 bg-white rounded-pill fs-16 text-gray-900 fw-500">Plans that fit every stage </span></li>
-                                            <li class="splide__slide"><span class="d-inline-block py-1 px-3 bg-white rounded-pill fs-16 text-gray-900 fw-500">Built to scale with your needs </span></li>
+                                            <li class="splide__slide"><span class="d-inline-block py-1 px-3 bg-white rounded-pill lh-30 fs-17 text-gray-900 fw-500">Affordable & scalable plans </span></li>
+                                            <li class="splide__slide"><span class="d-inline-block py-1 px-3 bg-white rounded-pill lh-30 fs-17 text-gray-900 fw-500">Plans that fit every stage </span></li>
+                                            <li class="splide__slide"><span class="d-inline-block py-1 px-3 bg-white rounded-pill lh-30 fs-17 text-gray-900 fw-500">Built to scale with your needs </span></li>
+                                            <li class="splide__slide"><span class="d-inline-block py-1 px-3 bg-white rounded-pill lh-30 fs-17 text-gray-900 fw-500">Affordable & scalable plans </span></li>
+                                            <li class="splide__slide"><span class="d-inline-block py-1 px-3 bg-white rounded-pill lh-30 fs-17 text-gray-900 fw-500">Plans that fit every stage </span></li>
+                                            <li class="splide__slide"><span class="d-inline-block py-1 px-3 bg-white rounded-pill lh-30 fs-17 text-gray-900 fw-500">Built to scale with your needs </span></li>
+                                            <li class="splide__slide"><span class="d-inline-block py-1 px-3 bg-white rounded-pill lh-30 fs-17 text-gray-900 fw-500">Affordable & scalable plans </span></li>
+                                            <li class="splide__slide"><span class="d-inline-block py-1 px-3 bg-white rounded-pill lh-30 fs-17 text-gray-900 fw-500">Plans that fit every stage </span></li>
+                                            <li class="splide__slide"><span class="d-inline-block py-1 px-3 bg-white rounded-pill lh-30 fs-17 text-gray-900 fw-500">Built to scale with your needs </span></li>
+                                            <li class="splide__slide"><span class="d-inline-block py-1 px-3 bg-white rounded-pill lh-30 fs-17 text-gray-900 fw-500">Affordable & scalable plans </span></li>
+                                            <li class="splide__slide"><span class="d-inline-block py-1 px-3 bg-white rounded-pill lh-30 fs-17 text-gray-900 fw-500">Plans that fit every stage </span></li>
+                                            <li class="splide__slide"><span class="d-inline-block py-1 px-3 bg-white rounded-pill lh-30 fs-17 text-gray-900 fw-500">Built to scale with your needs </span></li>
                                         </ul>
                                     </div>
                                 </div>
