--- a/src/home-three.html
+++ b/src/home-three.html
@@ -176,7 +176,15 @@
         <!-- header wrap -->
         <!-- banner wrap -->
         <div class="hero-wrapper bg-size-cover font-sora" style="background-image: url(images/banner-bg-3.webp);">
-            <div class="container h-100 position-relative">
+            <div class="w-100 h-100vh position-absolute top-0 start-0">
+                <img src="images/icon-4.png" alt="icon" class="hero-icon-1">
+                <img src="images/icon-4.png" alt="icon" class="hero-icon-2">
+                <img src="images/icon-4.png" alt="icon" class="hero-icon-3">
+                <img src="images/icon-4.png" alt="icon" class="hero-icon-4">
+                <img src="images/icon-5.png" alt="icon" class="hero-icon-5">
+                <img src="images/icon-5.png" alt="icon" class="hero-icon-6">
+            </div>
+            <div class="container h-100 position-relative z-5">
                 <div class="row h-100 justify-content-center">
                     <div class="col-lg-11 d-flex flex-column">
                         <div class="d-flex my-auto flex-column text-center">
