--- a/src/home-one.html
+++ b/src/home-one.html
@@ -197,7 +197,7 @@
                                     <svg viewBox="0 0 24 24" width="20" height="20" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="text-white"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                                 </a>
                                 <a href="about.html" data-aos="zoom-in" data-aos-duration="600" class="btn bg-gray-900 btn-lg rounded-2 px-4 text-gray-100 mb-1 btn-hover-bg-dark border-0">
-                                    <span>Read more</span>
+                                    <span>Explore more</span>
                                 </a>
                             </div>
                             <div data-aos="zoom-in" data-aos-duration="300">
@@ -292,8 +292,8 @@
                         <p class="text-gray-700 fw-400 pe-lg-5 mb-0" data-aos="fade-up" data-aos-duration="400" data-aos-delay="200">Genuine feedback from those who know us best.</p>
                     </div>
                     <div class="col-lg-6 d-flex">
-                        <a href="about.html" class="btn bg-primary btn-lg rounded-2 px-4 mt-auto ms-lg-auto text-white mb-1 btn-hover-bg-darken-primary border-0" data-aos="zoom-in" data-aos-duration="400" data-aos-delay="100">
-                            <span>Explore more</span>
+                        <a href="about-2.html" class="btn bg-primary btn-lg rounded-2 px-4 mt-auto ms-lg-auto text-white mb-1 btn-hover-bg-darken-primary border-0" data-aos="zoom-in" data-aos-duration="400" data-aos-delay="100">
+                            <span>Our Service</span>
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                         </a>
                     </div>
