--- a/src/home-three.html
+++ b/src/home-three.html
@@ -237,8 +237,8 @@
                             <h2 class="display5-size fw-600 text-gray-900 mt-4 mb-4" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">Automate your equity plans so you can focus on <span class="text-gradient">growing your</span> company</h2>
                             <p class="text-gray-800 fw-400 pe-lg-5 me-lg-4" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400"> Our platform empowers users and businesses alike to transact with confidence in a rapidly evolving digital economy.</p>
                             <div class="mt-auto" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">
-                                <a href="about-2.html" class="btn bg-cyan btn-lg rounded-2 px-4 mt-auto ms-lg-auto text-gray-900 mb-1 btn-hover-bg-lighten-cyan">
-                                    <span> Check out more</span>
+                                <a href="pricing-2.html" class="btn bg-cyan btn-lg rounded-2 px-4 mt-auto ms-lg-auto text-gray-900 mb-1 btn-hover-bg-lighten-cyan">
+                                    <span> Book Demo</span>
                                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                                 </a>
                             </div>
@@ -504,8 +504,8 @@
                                     Can I have a proposal I can with my team?
                                 </p>
                                 <div>
-                                    <a href="about.html" class="btn bg-cyan btn-lg rounded-2 px-4 mt-4 text-gray-900 mb-1 btn-hover-bg-lighten-cyan" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">
-                                        <span>Check out more</span>
+                                    <a href="about-2.html" class="btn bg-cyan btn-lg rounded-2 px-4 mt-4 text-gray-900 mb-1 btn-hover-bg-lighten-cyan" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">
+                                        <span>Our Service</span>
                                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                                     </a>
                                 </div>
