--- a/src/home-two.html
+++ b/src/home-two.html
@@ -426,7 +426,7 @@
                         <p class="text-gray-900 fw-400 mb-4 pb-2" data-aos="fade-up" data-aos-duration="500" data-aos-delay="600">Whether you're building a startup landing page, a dashboard interface, or a modern web app, Exsit gives you full control over the look and feel of your site.</p>
                         <div>
                             <a href="about.html" class="btn bg-warning btn-lg rounded-2 px-4 text-gray-900 mb-1 btn-hover-bg-darken-warning border-0" data-aos="fade-up" data-aos-duration="500" data-aos-delay="400">
-                                <span>Explore more</span>
+                                <span>Wo we are</span>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                             </a>
                         </div>
@@ -1020,7 +1020,7 @@
                 <div class="col-lg-6 d-flex">
                     <div class="mt-auto ms-lg-auto">
                         <a href="blog-1.html" data-aos="fade-left" data-aos-duration="400" data-aos-delay="400" class="btn bg-orange btn-lg rounded-2 px-4 text-white mb-1 d-flex gap-3 align-items-center justify-content-center btn-hover-bg-darken-warning border-0">
-                            <span>Explore more</span>
+                            <span>Check out for more blogs</span>
                             <svg viewBox="0 0 24 24" width="20" height="20" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="text-white"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                         </a>
                     </div>
