--- a/src/home-four.html
+++ b/src/home-four.html
@@ -251,7 +251,7 @@
                         <p class="text-gray-900 fw-400 mb-0" data-aos="fade-up" data-aos-duration="500" data-aos-delay="100">Genuine feedback from those who know us best.</p>
                     </div>
                     <div class="col-lg-6 d-flex">
-                        <a href="about.html" class="btn bg-darkgreen btn-lg rounded-2 px-4 mt-auto ms-lg-auto text-gray-900 mb-1 btn-hover-bg-lighten-darkgreen" data-aos="fade-up" data-aos-duration="500" data-aos-delay="100">
+                        <a href="about-2.html" class="btn bg-darkgreen btn-lg rounded-2 px-4 mt-auto ms-lg-auto text-gray-900 mb-1 btn-hover-bg-lighten-darkgreen" data-aos="fade-up" data-aos-duration="500" data-aos-delay="100">
                             <span>More about us</span>
                             <svg viewBox="0 0 24 24" width="20" height="20" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="text-gray-900"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                         </a>
@@ -427,7 +427,7 @@
                     </div>
                     <div class="row justify-content-center gy-4 gx-4">
                         <div class="col-lg-4" data-aos="zoom-in" data-aos-duration="400" data-aos-delay="0">
-                            <div class="d-flex flex-column p-5 bg-gradient-gray-100-200 border border-gray-300 rounded-4 font-sora mt-2">
+                            <div class="d-flex flex-column p-5 shadow-hover-lg bg-gradient-gray-100-200 border border-gray-300 rounded-4 font-sora mt-2">
                                 <h3 class="fs-22 fw-600 text-gray-900">Startup</h3>
                                 <p class="text-gray-700 fw-400 mb-0 fs-16 mt-1">Best for startup business owners who needs for business.</p>
                                 <h2 class="display5-size fw-600 text-gray-900 lh-1 my-4 py-2">$29<span class="fs-16 fw-400 text-gray-700 d-inline-block lh-1"> /month</span></h2>
@@ -468,7 +468,7 @@
                             </div>
                         </div>
                         <div class="col-lg-4" data-aos="zoom-in" data-aos-duration="400" data-aos-delay="100">
-                            <div class="d-flex flex-column p-5 bg-darkcyan rounded-4 font-sora">
+                            <div class="d-flex flex-column p-5 shadow-hover-lg bg-darkcyan rounded-4 font-sora">
                                 <h3 class="fs-22 fw-500 text-white">Business</h3>
                                 <p class="text-gray-500 fw-400 mb-0 fs-16 mt-1">The team is responsive, professional, and genuinely cares.</p>
                                 <h2 class="display5-size fw-600 text-white lh-1 my-4 py-2">$49<span class="fs-16 fw-400 text-gray-500 d-inline-block lh-1"> /month</span></h2>
@@ -515,7 +515,7 @@
                             </div>
                         </div>
                         <div class="col-lg-4" data-aos="zoom-in" data-aos-duration="400" data-aos-delay="200">
-                            <div class="d-flex flex-column p-5 bg-gradient-gray-100-200 border border-gray-300 rounded-4 font-sora mt-2">
+                            <div class="d-flex flex-column p-5 shadow-hover-lg bg-gradient-gray-100-200 border border-gray-300 rounded-4 font-sora mt-2">
                                 <h3 class="fs-22 fw-600 text-gray-900">Enterprise</h3>
                                 <p class="text-gray-700 fw-400 mb-0 fs-16 mt-1">Best for startup business owners who needs for business.</p>
                                 <h2 class="display5-size fw-600 text-gray-900 lh-1 my-4 py-2">$99<span class="fs-16 fw-400 text-gray-700 d-inline-block lh-1"> /month</span></h2>
