--- a/src/about.html
+++ b/src/about.html
@@ -232,7 +232,7 @@
                             <p class="text-gray-900 fw-400" data-aos="fade-up" data-aos-duration="500" data-aos-delay="400">Get intent on data the accounts you want to target as well as emails, direct dials, and cell phones. Everything you need to close the deal is right at your fingertips. Do not risk losing your current customers because they are not aware of additional products or services you provide. Build your ultimate prospecting list and know when your prospects intent signals increase or decrease to optimize your pipeline.</p>
                             <p class="text-gray-900 fw-400 mb-4 pb-2" data-aos="fade-up" data-aos-duration="500" data-aos-delay="600">Get intent on data the accounts you want to target as well as emails, direct dials, and cell phones. Everything you need to close the deal is right at your fingertips. Do not risk losing your current customers because they are not aware of additional products.</p>
                             <div>
-                                <a href="#" class="btn bg-info btn-lg rounded-2 px-4 text-white mb-1 btn-hover-bg-darken-info border-0" data-aos="fade-up" data-aos-duration="500" data-aos-delay="400">
+                                <a href="about-2.html" class="btn bg-info btn-lg rounded-2 px-4 text-white mb-1 btn-hover-bg-darken-info border-0" data-aos="fade-up" data-aos-duration="500" data-aos-delay="400">
                                     <span>Explore more</span>
                                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                                 </a>
@@ -290,7 +290,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-6 member-wrap" data-aos="zoom-in" data-aos-delay="0" data-aos-duration="400">
                         <div class="d-flex flex-column gap-3">
                             <div class="overflow-hidden rounded-4 position-relative image-zoom-onhover">
-                                <a href="#"><img src="images/team/member-23.webp" alt="member" class="w-100 img-fluid" width="306" height="407" loading="lazy"></a>
+                                <a href="team.html"><img src="images/team/member-23.webp" alt="member" class="w-100 img-fluid" width="306" height="407" loading="lazy"></a>
                                 <div class="social-wrap social-wrap-box position-absolute top-4">
                                     <ul class="d-flex flex-column gap-2 ms-3">
                                         <li class="mb-1">
@@ -330,7 +330,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-6 member-wrap" data-aos="zoom-in" data-aos-delay="100" data-aos-duration="400">
                         <div class="d-flex flex-column gap-3">
                             <div class="overflow-hidden rounded-4 position-relative image-zoom-onhover">
-                                <a href="#"><img src="images/team/member-22.webp" alt="member" class="w-100 img-fluid" width="306" height="407" loading="lazy"></a>
+                                <a href="team.html"><img src="images/team/member-22.webp" alt="member" class="w-100 img-fluid" width="306" height="407" loading="lazy"></a>
                                 <div class="social-wrap social-wrap-box position-absolute top-4">
                                     <ul class="d-flex flex-column gap-2 ms-3">
                                         <li class="mb-1">
@@ -370,7 +370,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-6 member-wrap" data-aos="zoom-in" data-aos-delay="200" data-aos-duration="400">
                         <div class="d-flex flex-column gap-3">
                             <div class="overflow-hidden rounded-4 position-relative image-zoom-onhover">
-                                <a href="#"><img src="images/team/member-21.webp" alt="member" class="w-100 img-fluid" width="306" height="407" loading="lazy"></a>
+                                <a href="team.html"><img src="images/team/member-21.webp" alt="member" class="w-100 img-fluid" width="306" height="407" loading="lazy"></a>
                                 <div class="social-wrap social-wrap-box position-absolute top-4">
                                     <ul class="d-flex flex-column gap-2 ms-3">
                                         <li class="mb-1">
@@ -410,7 +410,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-6 member-wrap" data-aos="zoom-in" data-aos-delay="300" data-aos-duration="400">
                         <div class="d-flex flex-column gap-3">
                             <div class="overflow-hidden rounded-4 position-relative image-zoom-onhover">
-                                <a href="#"><img src="images/team/member-20.webp" alt="member" class="w-100 img-fluid" width="306" height="407" loading="lazy"></a>
+                                <a href="team.html"><img src="images/team/member-20.webp" alt="member" class="w-100 img-fluid" width="306" height="407" loading="lazy"></a>
                                 <div class="social-wrap social-wrap-box position-absolute top-4">
                                     <ul class="d-flex flex-column gap-2 ms-3">
                                         <li class="mb-1">
