--- a/src/blog-3.html
+++ b/src/blog-3.html
@@ -433,7 +433,7 @@
                                 </div>
                                 <div class="col-12 mt-5">
                                     <div class="d-flex justify-content-center">
-                                        <a href="#" data-aos="zoom-in" data-aos-duration="400" class="btn bg-gray-900 btn-lg rounded-2 px-4 text-white mb-1 d-flex gap-3 align-items-center justify-content-center btn-hover-bg-darken-dark border-0 ">
+                                        <a href="blog-1.html" data-aos="zoom-in" data-aos-duration="400" class="btn bg-gray-900 btn-lg rounded-2 px-4 text-white mb-1 d-flex gap-3 align-items-center justify-content-center btn-hover-bg-darken-dark border-0 ">
                                             <span>Load more</span>
                                             <svg viewBox="0 0 24 24" width="20" height="20" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="text-white"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                                         </a>
