--- a/src/cart.html
+++ b/src/cart.html
@@ -313,7 +313,7 @@
                                     <span class="fw-600 text-gray-900">Total</span><span class="fw-600 text-gray-900">$355.57</span>
                                 </div>
                                 <div class="d-flex pt-4 flex-row justify-content-start gap-2 align-items-center">
-                                    <button type="submit" class="btn btn-info bg-gradient btn-lg mb-2 w-100">Continue</button>
+                                    <a href="checkout.html" class="btn btn-info bg-gradient btn-lg mb-2 w-100">Continue</a>
                                 </div>
                             </div>
                         </div>
