--- a/src/home-one.html
+++ b/src/home-one.html
@@ -227,16 +227,16 @@
                             <div class="mt-4 flex-row gap-4 d-lg-flex d-none position-absolute end-n-8 top-4 bg-white rounded-4 border border-gray-200 shadow-sm p-3" data-aos="fade-up" data-aos-duration="400" data-delay="400">
                                 <div class="avatar-group d-flex flex-row" >
                                     <div class="avatar me-2 avatar-rounded">
-                                        <img src="images/avatars/avater-11.webp" alt="member-avatar" class="rounded-pill w-12 h-12" loading="lazy"> 
+                                        <img src="images/avatars/avater-11.webp" alt="member-avatar" class="rounded-pill w-11 h-11" loading="lazy"> 
                                     </div>
                                     <div class="avatar me-2 avatar-rounded">
-                                        <img src="images/avatars/avater-12.webp" alt="member-avatar" class="rounded-pill w-12 h-12" loading="lazy"> 
+                                        <img src="images/avatars/avater-12.webp" alt="member-avatar" class="rounded-pill w-11 h-11" loading="lazy"> 
                                     </div>
                                     <div class="avatar me-2 avatar-rounded">
-                                        <img src="images/avatars/avater-13.webp" alt="member-avatar" class="rounded-pill w-12 h-12" loading="lazy"> 
+                                        <img src="images/avatars/avater-13.webp" alt="member-avatar" class="rounded-pill w-11 h-11" loading="lazy"> 
                                     </div>
                                 </div>
-                                <h3 class="text-gray-900 fw-500 mb-0">7.65m+ <span class="d-block text-gray-900 fs-15 fw-500">Content Creators and Teams</span></h3>
+                                <span class="text-gray-900 fw-600 mb-0 fs-24 d-flex flex-column lh-6">7.65m+ <span class="d-block text-gray-900 fs-15 fw-500">Content Creators and Teams</span></span>
                             </div>
                             <div class="w-100 bottom-0 z-5 start-0 m-4 d-flex flex-column position-absolute">
                                 <div id="vertical-carousel" class="splide overflow-hidden vertical-sldier h-135 slider-no-dots">
