--- a/src/home-one.html
+++ b/src/home-one.html
@@ -176,7 +176,7 @@
         </header>
         <!-- header wrap -->
         <!-- banner wrap -->
-        <div class="banner-wrap bg-gradient-home-banner header-top font-dm position-relative">
+        <div class="banner-wrap bg-gradient-home-banner header-top font-dm position-relative overflow-hidden">
             <img src="images/svg/svg-diagram-1.png" alt="diagram" class="position-absolute start-5 d-none d-lg-flex" loading="lazy">
             <img src="images/svg/svg-diagram-1.png" alt="diagram" class="position-absolute end-5 bottom-5 rotate-180 d-none d-lg-flex" loading="lazy">
             <div class="container maxw-1300 pt-lg-5 pt-4">
@@ -201,7 +201,7 @@
                                 </a>
                             </div>
                             <div data-aos="zoom-in" data-aos-duration="300">
-                                <img src="images/text-icon.png" alt="text" class="ps-lg-5" width="299" height="70" loading="eager">
+                                <img src="images/text-icon.png" alt="text" class="ps-lg-5" width="250" height="70" loading="eager">
                             </div>
                         </div>
                     </div>
@@ -464,7 +464,7 @@
                             <p class="text-gray-900 fw-400 w-lg-75 mb-5 mt-4"  data-aos="fade-up" data-aos-duration="400" data-aos-delay="200">Whether you're building a startup landing page, a dashboard interface, or a modern web app, Exsit gives you full control over the look and feel of your site.</p>
                             <div class="row" data-aos="fade-up" data-aos-duration="400" data-aos-delay="200">
                                 <div class="col-xl-3 col-lg-4 col-4">
-                                    <h3 class="text-gray-900 display5-size fw-500"><span data-percentage="4.5" class="exsit-counter"></span>k</h3>
+                                    <h3 class="text-gray-900 fs-48 fw-500"><span data-percentage="4.5" class="exsit-counter"></span>k</h3>
                                 </div>
                                 <div class="col-xl-6 col-lg-8 col-8">
                                     <p class="text-gray-900 mb-2">Individuals who believe — in our shared vision for success.</p>
@@ -473,7 +473,7 @@
                             </div>
                             <div class="row mt-4" data-aos="fade-up" data-aos-duration="400" data-aos-delay="300">
                                 <div class="col-xl-3 col-lg-4 col-4">
-                                    <h3 class="text-gray-900 display5-size fw-500"><span data-percentage="2.8" class="exsit-counter"></span>x</h3>
+                                    <h3 class="text-gray-900 fs-48 fw-500"><span data-percentage="2.8" class="exsit-counter"></span>x</h3>
                                 </div>
                                 <div class="col-xl-6 col-lg-8 col-8">
                                     <p class="text-gray-900 mb-2">Customers who rely  — on our honest recommendations.</p>
