--- a/src/home-two.html
+++ b/src/home-two.html
@@ -225,7 +225,7 @@
                 </div>
             </div>
             <div class="row justify-content-center pb-65">
-                <div class="col-12 brand-carousel">
+                <div class="col-12 carousel-edge-fade">
                     <!-- Splide Container -->
                     <div id="autoscroll-carousel" class="splide slider-no-arrows slider-no-dots slider-pagination-top-right position-static mb-3">
                         <div class="splide__track">
