--- a/src/home-three.html
+++ b/src/home-three.html
@@ -177,12 +177,12 @@
         <!-- banner wrap -->
         <div class="hero-wrapper bg-size-cover font-sora" style="background-image: url(images/banner-bg-3.webp);">
             <div class="w-100 h-100vh position-absolute top-0 start-0">
-                <img src="images/icon-4.png" alt="icon" class="hero-icon-1">
-                <img src="images/icon-4.png" alt="icon" class="hero-icon-2">
-                <img src="images/icon-4.png" alt="icon" class="hero-icon-3">
-                <img src="images/icon-4.png" alt="icon" class="hero-icon-4">
-                <img src="images/icon-5.png" alt="icon" class="hero-icon-5">
-                <img src="images/icon-5.png" alt="icon" class="hero-icon-6">
+                <img src="images/icon-4.png" alt="icon" class="hero-icon-1 d-none d-lg-flex">
+                <img src="images/icon-4.png" alt="icon" class="hero-icon-2 d-none d-lg-flex">
+                <img src="images/icon-4.png" alt="icon" class="hero-icon-3 d-none d-lg-flex">
+                <img src="images/icon-4.png" alt="icon" class="hero-icon-4 d-none d-lg-flex">
+                <img src="images/icon-5.png" alt="icon" class="hero-icon-5 d-none d-lg-flex">
+                <img src="images/icon-5.png" alt="icon" class="hero-icon-6 d-none d-lg-flex">
             </div>
             <div class="container h-100 position-relative z-5">
                 <div class="row h-100 justify-content-center">
