--- a/src/home-one.html
+++ b/src/home-one.html
@@ -468,7 +468,7 @@
                                 </div>
                                 <div class="col-xl-6 col-lg-8 col-8">
                                     <p class="text-gray-900 mb-2">Individuals who believe — in our shared vision for success.</p>
-                                    <a href="#" aria-label="Read more about our company" class="text-gray-900 fw-600 fs-16">Read more <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg></a>
+                                    <a href="#"  class="text-gray-900 fw-600 fs-16">Read more <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg></a>
                                 </div>
                             </div>
                             <div class="row mt-4" data-aos="fade-up" data-aos-duration="400" data-aos-delay="300">
@@ -477,7 +477,7 @@
                                 </div>
                                 <div class="col-xl-6 col-lg-8 col-8">
                                     <p class="text-gray-900 mb-2">Customers who rely  — on our honest recommendations.</p>
-                                    <a href="#" aria-label="Read more about our company" class="text-gray-900 fw-600 fs-16">Read more <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg></a>
+                                    <a href="#"  class="text-gray-900 fw-600 fs-16">Read more <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up-right ms-2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg></a>
                                 </div>
                             </div>
                         </div>
@@ -970,8 +970,8 @@
                                 <span>Start trial for 14 days</span>
                                 <svg viewBox="0 0 24 24" width="20" height="20" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="text-white"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                             </a>
-                            <a href="about.html" aria-label="Read more about our company" data-aos="zoom-in" data-aos-duration="600" class="btn bg-gray-900 btn-lg rounded-2 px-4 text-gray-100 mb-1 btn-hover-bg-dark border-0">
-                                <span>Read more</span>
+                            <a href="about.html"  data-aos="zoom-in" data-aos-duration="600" class="btn bg-gray-900 btn-lg rounded-2 px-4 text-gray-100 mb-1 btn-hover-bg-dark border-0">
+                                <span>Discover more</span>
                             </a>
                         </div>
                     </div>
