--- a/src/blog-3.html
+++ b/src/blog-3.html
@@ -565,7 +565,7 @@
                                 <svg viewBox="0 0 24 24" width="20" height="20" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="text-white"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                             </a>
                             <a href="about.html" data-aos="zoom-in" data-aos-duration="600" class="btn bg-gray-900 btn-lg rounded-2 px-4 text-gray-100 mb-1 btn-hover-bg-dark border-0">
-                                <span>Read more</span>
+                                <span>Discover more</span>
                             </a>
                         </div>
                     </div>
