--- a/src/home-one.html
+++ b/src/home-one.html
@@ -201,7 +201,7 @@
                                 </a>
                             </div>
                             <div data-aos="zoom-in" data-aos-duration="300">
-                                <img src="images/text-icon.png" alt="text" class="ps-lg-5" width="250" height="70" loading="eager">
+                                <img src="images/text-icon.png" alt="text" class="start-5 position-relative" width="299" height="70" loading="eager">
                             </div>
                         </div>
                     </div>
